--- a/PracticeUni.csproj
+++ b/PracticeUni.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayOne.cs" />
     <Compile Include="FirstTask.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -54,8 +55,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MatrixArr.cs" />
+    <Compile Include="OneArr.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OneArr.Designer.cs">
+      <DependentUpon>OneArr.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoArr.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TwoArr.Designer.cs">
+      <DependentUpon>TwoArr.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
