--- a/PracticeUni.csproj
+++ b/PracticeUni.csproj
@@ -62,8 +62,15 @@
     <Compile Include="OneArr.Designer.cs">
       <DependentUpon>OneArr.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pract3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToUnitTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ToUnitTest.Designer.cs">
+      <DependentUpon>ToUnitTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="TwoArr.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +93,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ToUnitTest.resx">
+      <DependentUpon>ToUnitTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TwoArr.resx">
       <DependentUpon>TwoArr.cs</DependentUpon>
     </EmbeddedResource>
