--- a/Calculation_abcTest/Calculation_abcTest.csproj
+++ b/Calculation_abcTest/Calculation_abcTest.csproj
@@ -52,6 +52,8 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest2.cs" />
+    <Compile Include="ReadFile.cs" />
+    <Compile Include="ArrayTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
